GNOME Bugzilla – Bug 725907
omxvideodec: Two more minor fixes for memory leaks
Last modified: 2014-07-23 08:23:33 UTC
Created attachment 271253 [details] [review] Fix #1 This time in the video decoder.
Created attachment 271254 [details] [review] Fix #2
commit 14a0da437ff83ca5f0037f725179715e6efdbac4 Author: Christian König <christian.koenig@amd.com> Date: Fri Mar 7 17:12:24 2014 +0100 omxvideodec: fix memory leak in gst_omx_video_dec_allocate_output_buffers https://bugzilla.gnome.org/show_bug.cgi?id=725907 commit 5ac0fe21086f25d56aeb804fa69c325cc74c120f Author: Christian König <christian.koenig@amd.com> Date: Fri Mar 7 13:18:49 2014 +0100 omxvideodec: fix memory leak gst_omx_video_dec_negotiate https://bugzilla.gnome.org/show_bug.cgi?id=725907